# MDIndexing_CrustyDB

./: .gitignore  Cargo.toml  README.md  client.sh  debug-server.sh  history.txt  info-server.sh  milestone-hs.md  milestone-performance.md  milestone-pg.md  milestone-qo.md  my-hs.txt  my-op.txt  my-perf.txt  my-pg.txt  test-client-script  vscode-launch.json
e2e-benchmarks/: Cargo.toml
e2e-benchmarks/benches/: benchmain.rs
e2e-benchmarks/benches/benchmarks/: benchtemplate.rs  filterbench.rs  indexbench.rs  joinbench.rs  mod.rs  test.rs
e2e-tests/: Cargo.toml  runTests.sh
e2e-tests/csv/: data.csv  data2.csv  data4x10.csv  filter1.csv  filter2.csv  index100.csv  index1res2.csv  index2.csv  index2res1.csv  index2res2.csv  index2res3.csv  join1.csv  max4bcd.csv
e2e-tests/src/: main.rs  sqllogictest.rs
e2e-tests/src/deltadata/: error_not_panic  filter  query_registration
e2e-tests/testdata/: agg1  agg2  filter1  filter2  index1  index2  index3  join1  match  table_creation
src/cli-crusty/: Cargo.toml  config.json
src/cli-crusty/src/: main.rs
src/common/: Cargo.toml
src/common/src/: catalog.rs  commands.rs  crusty_graph.rs  database.rs  delta_storage_trait.rs  ids.rs  lib.rs  storage_trait.rs  table.rs  testutil.rs
src/common/src/logical_plan/: delta_op.rs  logical_op.rs  mod.rs
src/common/src/md_index/: kd_tree.rs  kd_tree_draft.rs  mod.rs  r_tree.rs
src/common/src/physical_plan/: mod.rs  physical_op.rs
src/common/src/tests/: md_integration.rs
src/heapstore/: Cargo.toml
src/heapstore/benches/: heap_bench.rs  page_bench.rs  sm_bench.rs
src/heapstore/src/: heapfile.rs  heapfileiter.rs  lib.rs  page.rs  storage_manager.rs  testutil.rs
src/heapstore/tests/: sm_integration.rs
src/heapstore/tmp/containers_location/: 1
src/memstore/: Cargo.toml
src/memstore/src/: lib.rs  storage_manager.rs
src/memstore/tests/: sm_integration.rs
src/optimizer/: Cargo.toml
src/optimizer/src/: optimizer.rs
src/queryexe/: Cargo.toml
src/queryexe/src/: lib.rs
src/queryexe/src/md_index/: kd_tree  kd_tree.rs  kd_tree_draft.rs  mod.rs
src/queryexe/src/opiterator/: aggregate.rs  filter.rs  join.rs  mod.rs  project.rs  seqscan.rs  testutil.rs  tuple_iterator.rs
src/queryexe/src/query/: executor.rs  mod.rs  translate_and_validate.rs
src/queryexe/tests/: md_integration.rs
src/server/: Cargo.toml
src/server/src/: commands.rs  conductor.rs  csv_utils.rs  daemon.rs  database_state.rs  handler.rs  main.rs  query_registrar.rs  server_state.rs  sql_parser.rs  worker.rs
src/txn_manager/: Cargo.toml
src/txn_manager/src/: lib.rs  transactions.rs
src/utilities/: Cargo.toml
src/utilities/src/: lib.rs  serverwrapper.rs  sqllogictest_utils.rs  template.rs
test_data/: index100.csv  index1000.csv  index10000.csv  index5000.csv  index50000.csv  left_data.csv
