[package]
name = "cli-crusty"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "Chris Marrero",
    "William Ma <williamma@uchicago.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rustyline="6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
log = "0.4.11"
env_logger = "0.7.1"
common = { path = "../common" }
