[package]
name = "common"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false


[dependencies]
sqlparser="=0.9.0"
csv="1.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
rand = "0.8.2"
log = "0.4.11"
env_logger = "0.7.1"
itertools = "0.8"
