[package]
name = "optimizer"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path ="../common"}
log = "0.4.11"
env_logger = "0.7.1"
