[package]
name = "utilities"
version = "0.1.0"
authors = [
    "Aaron Elmore <aelmore@cs.uchicago.edu>",
    "Raul Castro Fernandez <raulcf@uchicago.edu>",
    "Daisy Barbanel", "Noah Banholzer",
    "William Ma <williamma@uchicago.edu>"]
edition = "2021"

[lib]
doctest = false

[dependencies]
common = { path = "../common" }
escargot = "0.5"
rand = "0.7.3"
log = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.1"
env_logger = "0.7.1"
regex = "1.5.4"
